# panda

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml
.github/workflows/: docs.yml  release.yml
data/: README.md  exp1_results.csv  exp1_simulate_networks.R  exp1_solve_MAPPD.py  exp2_solve_MAPPD.py  exp2_xiphophorus_network.txt  experiment1.py  experiment1_results.csv  experiment1_results.txt  simulate_networks.R  simulation.py  xiphophorus.py
docs/: README.md
docs/source/: conf.py  index.rst  installation.rst  manual.rst  quickstart.rst
docs/source/api/: all_paths.rst  all_paths_solvers.rst  average_tree.rst  base.rst  index.rst  max_tree.rst  measures.rst  min_tree.rst  network.rst  protocol.rst  tree.rst
experiments/: README.md
experiments/MAPPD/: README.md  exp1_solve_MAPPD.py  exp2_solve_MAPPD.py
experiments/budgeted_PD/: 01_generate_networks.py  02_generate_costs.py  03_compute_extensions.py  04_run_benchmark.py  05_run_large_network_experiments.py  README.md  __init__.py  algorithm_benchmark.py  algorithm_benchmark_results.csv  contract_edges.py  cost_assignment.py  large_network_results.csv  large_networks.py  node_scanwidth.py
gui/: README.md
gui/src/: GUI.py  __main__.py
phypanda/: LICENSE  README.md  pyproject.toml  setup.cfg
phypanda/src/phypanda/: __init__.py  mappd.py  scanwidth.py  utils.py
phypanda/src/phypanda/measure/: __init__.py  all_paths.py  max_tree.py  min_tree.py  network.py  tree.py
phypanda/src/phypanda/measure/all_paths_solvers/: __init__.py  esw_fpt.py
phypanda/src/phypanda/utils/: __init__.py
phypanda/tests/: test_mappd_regression.py
src/phypanda/: __init__.py  base.py  protocol.py  utils.py
src/phypanda/measure/: __init__.py  all_paths.py  average_tree.py  max_tree.py  min_tree.py  network.py  tree.py
src/phypanda/measure/all_paths_solvers/: __init__.py  esw_fpt.py  nsw_fpt_budget.py
tests/: __init__.py  apd_baselines.py  baselines.py  networks_exp1.py  test_adapt_tree_extension.py  test_apd_regression_baselines.py  test_child_merge_dp.py  test_max_tree_budget.py  test_min_tree_compute_diversity.py  test_networks.py  test_nsw_fpt_budget.py
