[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "phypanda"
version = "2.0.0.dev"
description = "package containing the PaNDA framework for exploring and maximizing phylogenetic diversity in phylogenetic networks"
authors = [
    { name = "N. Holtgrefe", email = "n.a.l.holtgrefe@tudelft.nl" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "phylozoo >= 0.1.2",
    "networkx >= 3.0",
    "scanwidth >= 0.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/nholtgrefe/panda"
Repository = "https://github.com/nholtgrefe/panda"

[tool.setuptools.packages.find]
where = ["src"]