[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phypanda"
version = "2.0.0"
description = "a package for computing and maximizing phylogenetic diversity in phylogenetic networks"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Niels Holtgrefe", email = "n.a.l.holtgrefe@tudelft.nl" }
]
keywords = [
    "phylogenetics",
    "phylogenetic network",
    "phylogenetic diversity",
    "PaNDA",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "phylozoo >= 0.1.2",
    "networkx >= 3.0",
    "scanwidth >= 0.2.5",
    "numba >= 0.56",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "pydata-sphinx-theme>=0.15.0",
]

[project.urls]
Repository = "https://github.com/nholtgrefe/panda"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
