[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "phypanda"
version = "1.0.1"
description = "package containing the PaNDA framework for exploring, visualizing and maximizing phylogenetic diversity in phylogenetic networks"
authors = [
    { name = "N. Holtgrefe", email = "n.a.l.holtgrefe@tudelft.nl" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]

dependencies = [
    "physquirrel <= 1.1",
    "numpy >= 2.0",
    "networkx >= 3.0",
    "matplotlib >= 3.7",
    "phylox >= 1.1",
]

[tool.setuptools.packages.find]
where = ["src"]