[metadata]
name = phypanda
version = 2.0.0.dev
author = N. Holtgrefe
author_email = n.a.l.holtgrefe@tudelft.nl
description = package containing the PaNDA framework for exploring and maximizing phylogenetic diversity in phylogenetic networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nholtgrefe/panda/tree/main/phypanda
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    phylozoo >= 0.1.1
    networkx >= 3.0
    scanwidth >= 0.2.2

[options.packages.find]
where = src